<resources>
    <string name="app_name">PayBack</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>


    <string name="title_messages">Messages</string>
    <string name="title_friends">Friends</string>
    <string name="title_home">Home</string>

    <string name="title_activity_signin">Signin</string>

    <string name="hello_world">Hello world!</string>
    <string name="title_activity_signup">Signup</string>
    <string name="title_activity_home">HomeActivity</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="hint_name">Name</string>
    <string name="hint_username">Username</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_address">Address</string>
    <string name="btn_sign_up">Register</string>
    <string name="btn_sign_in">Login</string>

    <string name="btn_lend">Lend Money</string>
    <string name="btn_receive">Receive Money</string>

    <string name="err_msg_name">Enter username</string>
    <string name="err_msg_email">Enter valid email address</string>
    <string name="err_msg_password">Enter the password</string>
    <string name="err_msg_address">Enter the address</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_forgot_password">ForgotPasswordActivity</string>
    <string name="title_activity_change_password">ChangePasswordActivity</string>
    <string name="title_activity_lend_money">LendMoneyActivity</string>
    <string name="title_activity_receive_money">ReceiveMoneyActivity</string>

    <string name="checkbox">Click to agree </string>
    <string name="paycheckbox">Click to agree</string>
    <string name="paybackamt"><b>Payback Amount</b> </string>
    <string name="date"><b>Date</b></string>

    <string name="terms"> <u>Terms, Conditons</u> </string>
    <string name="policy"> <u>Policy.</u> </string>

    <string name="paybackby"><b>Pay</b> Back By</string>
    <string name="personalinfo"><b><u>Personal Information:</u></b></string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_bank_info">BankInfoActivity</string>
    <string name="title_activity_lend_money_list">LendMoneyListActivity</string>
    <string name="title_activity_receive_money_list">ReceiveMoneyListActivity</string>
    <string name="title_activity_list_action">ListActionActivity</string>
    <string name="title_activity_user_profile">UserProfileActivity</string>

    <integer-array name="nav_drawer_icons">
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
        <item>@drawable/ic_launcher</item>
    </integer-array>

    <string-array name="nav_drawer_labels">
        <item>@string/nav_item_home</item>
        <item>@string/nav_item_profile</item>
        <item>@string/nav_item_cc</item>
        <item>@string/nav_item_cp</item>
        <item>@string/nav_item_logout</item>
    </string-array>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_profile">User Profile</string>
    <string name="nav_item_cc">Banking Info</string>
    <string name="nav_item_cp">Change Password</string>
    <string name="nav_item_logout">Logout</string>

    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>