<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@drawable/top_header"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="20dp"
            android:paddingBottom="20dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_vertical"
                android:weightSum="5">

                <ImageView
                    android:id="@+id/img_cam"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/cam"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <ImageView
                        android:id="@+id/img_profile"
                        android:layout_width="100dp"
                        android:layout_height="100dp"
                        android:scaleType="fitXY"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/profile_default_pic"/>
                </LinearLayout>

                <ImageView
                    android:id="@+id/img_gall"
                    android:layout_width="0dp"
                    android:layout_weight="1.5"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/gallery"/>

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/input_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/user_name"
                    android:drawablePadding="5dp"
                    android:singleLine="true"
                    android:hint="@string/hint_name" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/emailid"
                    android:drawablePadding="5dp"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    android:hint="@string/hint_email" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/pswd"
                    android:drawablePadding="5dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:hint="@string/hint_password" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="5dp"
                    android:drawableLeft="@drawable/ic_city"
                    android:inputType="text"
                    android:singleLine="true"
                    android:hint="City" />
            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="2"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_state"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_state"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:hint="State" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_zip"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/input_zip"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawablePadding="5dp"
                        android:inputType="text"
                        android:singleLine="true"
                        android:hint="Zip Code" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/check"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@drawable/checkbox_selector"
                    android:text="@string/checkbox"/>

                <TextView
                    android:id="@+id/terms"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/terms"/>
                <TextView
                    android:id="@+id/policy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:text="@string/policy"/>

            </LinearLayout>

            <Button android:id="@+id/btn_signup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_sign_up"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:layout_marginTop="15dp"
                android:textColor="@android:color/white"/>


        </LinearLayout>

    </ScrollView>

</LinearLayout>