<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true"
        android:padding="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/input_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_bank"
                android:drawablePadding="5dp"
                android:singleLine="true"
                android:hint="card holder name" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/input_card"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/cars_info"
                android:drawablePadding="5dp"
                android:inputType="number"
                android:singleLine="true"
                android:hint="card number" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_expdate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_expdate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_calendar"
                    android:drawablePadding="5dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:editable="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="expiry date" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_cv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_cv"
                    android:layout_width="match_parent"
                    android:layout_height="53dp"
                    android:drawablePadding="5dp"
                    android:inputType="number"
                    android:singleLine="true"
                    android:hint="CVV number" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/check"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_selector"
                android:text="@string/checkbox"/>

            <TextView
                android:id="@+id/terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/terms"/>
            <TextView
                android:id="@+id/policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/policy"/>

        </LinearLayout>

        <Button android:id="@+id/btn_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textAllCaps="false"
            android:background="@color/colorPrimary"
            android:layout_marginTop="15dp"
            android:textColor="@android:color/white"/>


    </LinearLayout>


</RelativeLayout>
